--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "uninstall": "0.0.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+	"node-sass": "^3.4.2"
   },
   "devDependencies": {
     "@angular/language-service": "~7.2.0",
