--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "ngx-select-dropdown": "^1.3.0",
     "oauth": "^0.9.15",
     "twit": "^2.2.11",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+	"node-sass": "^3.4.2"
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
@@ -44,7 +45,8 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
     "json2csv": "^4.5.4",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+	"node-sass": "^3.4.2"
   },
   "engines": {
     "node": "10.15.1",
