--- a/client/package.json
+++ b/client/package.json
@@ -28,15 +28,16 @@
     "chartist-svg": "^0.1.5",
     "compass-mixins": "^0.12.10",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
     "ngx-cookie-service": "^2.1.0",
     "ngx-modal-dialog": "^3.0.0",
+    "node-sass": "^4.0.0",
     "query-string": "^6.2.0",
     "rebuild-node-sass": "^1.1.0",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "uninstall": "0.0.0",
-    "zone.js": "~0.8.26",
-	"node-sass": "^4.0.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular/language-service": "~7.2.0",
@@ -53,11 +54,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.0.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
-	"node-sass": "^4.0.0"
+    "typescript": "~3.2.2"
   }
 }
