--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cd server && node ./index",
-    "dev": "cd server && nodemon ./index",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "postinstall": "cd client && npm install && npm run build"
+    "dev": "cd server && nodemon ./index"
   },
   "keywords": [],
   "author": "",
