--- a/package.json
+++ b/package.json
@@ -4,19 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd server && node ./index",
-    "dev": "cd server && nodemon ./index"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular-devkit/core": "^8.3.21",
-    "@angular-devkit/schematics": "^8.3.21",
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/material": "^8.2.3",
-    "angular-jquery-timepicker": "^0.13.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
@@ -30,12 +24,11 @@
     "mongoose": "^5.8.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "ngx-material-timepicker": "^5.3.0",
-    "ngx-select-dropdown": "^1.3.0",
     "oauth": "^0.9.15",
     "twit": "^2.2.11",
     "twitter": "^1.7.1",
-    "node-sass": "^4.0.0"
+    "node-sass": "^4.0.0",
+    "json2csv": "^4.5.4"
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
